Added angular test for login with google